cmake_minimum_required(VERSION 3.10)
project(CS403)

set(CMAKE_CXX_STANDARD 14)

add_executable(lab0_1 Lab-0/lab0_1.cpp)
add_executable(lab0_2 Lab-0/lab0_2.cpp)
add_executable(lab0_3 Lab-0/lab0_3.cpp)
add_executable(lab0_4 Lab-0/lab0_4.cpp)
add_executable(lab0_5 Lab-0/lab0_5.cpp)


add_executable(lab1_1 Lab-1/lab1_1.cpp)
add_executable(lab1_2 Lab-1/lab1_2.cpp)
add_executable(lab1_3 Lab-1/lab1_3.cpp)
add_executable(lab1_4 Lab-1/lab1_4.cpp)

add_executable(lab2_1 Lab-2/lab2_1.cpp)
add_executable(lab2_2 Lab-2/lab2_2.cpp)
add_executable(lab2_3 Lab-2/lab2_3.cpp)
add_executable(lab2_4 Lab-2/lab2_4.cpp)
add_executable(lab2_5 Lab-2/lab2_5.cpp)

add_executable(lab3_1 Lab-3/lab3_1.cpp)
add_executable(lab3_2 Lab-3/lab3_2.cpp)
add_executable(lab3_3 Lab-3/lab3_3.cpp)
add_executable(lab3_4 Lab-3/lab3_4.cpp)
add_executable(lab3_5 Lab-3/lab3_5.cpp)

add_executable(lab4_1 Lab-4/lab4_1.cpp)
add_executable(lab4_2 Lab-4/lab4_2.cpp)
add_executable(lab4_3 Lab-4/lab4_3.cpp)
add_executable(lab4_4 Lab-4/lab4_4.cpp)
add_executable(lab4_5 Lab-4/lab4_5.cpp)

add_executable(lab5_1 Lab-5/lab5_1.cpp)
add_executable(lab5_2 Lab-5/lab5_2.cpp)
add_executable(lab5_3 Lab-5/lab5_3.cpp)
add_executable(lab5_4 Lab-5/lab5_4.cpp)
add_executable(lab5_5 Lab-5/lab5_5.cpp)

add_executable(lab6_2 Lab-6/lab6_2.cpp)
add_executable(lab6_3 Lab-6/lab6_3.cpp)
add_executable(lab6_4 Lab-6/lab6_4.cpp)
add_executable(lab6_5 Lab-6/lab6_5.cpp)
add_executable(lab6_6 Lab-6/lab6_6.cpp)
add_executable(lab6_7 Lab-6/lab6_7.cpp)
add_executable(lab6_8 Lab-6/lab6_8.cpp)
add_executable(lab6_9 Lab-6/lab6_9.cpp)
add_executable(lab6_10 Lab-6/lab6_10.cpp)
add_executable(lab6_11 Lab-6/lab6_11.cpp)
add_executable(lab6_12 Lab-6/lab6_12.cpp)
add_executable(lab6_13 Lab-6/lab6_13.cpp)